# pkgsizer-project

./: .gitignore  .gitlab-ci.yml  AI_DISCOVERABILITY.md  ALL_COMMANDS_REFERENCE.md  ALTERNATIVES_EXPLAINED.md  CHANGELOG.md  CODE_REVIEW_AND_OPTIMIZATION.md  COMMAND_EXPLANATION.md  DEEP_FEATURE_ANALYSIS.md  DEPENDENCY_CHAIN_FEATURE.md  FEATURE_ROADMAP.md  HTML_REPORT_EXPLANATION.md  IMPLEMENTATION.md  IMPROVEMENTS.md  INDEX.md  LICENSE  MANIFEST.in  NEXT_STEPS.md  PERFORMANCE_AND_FEATURES.md  PROGRESS_SUMMARY.txt  PROJECT_SUMMARY.md  PUBLISHING_GUIDE.md  PUBLISH_INSTRUCTIONS.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  SEO_IMPROVEMENTS.md  START_HERE.md  TESTING_GUIDE.md  TREE_DISPLAY_FEATURE.md  UI_IMPROVEMENTS_SUMMARY.md  WEEK1_COMPLETE.md  WEEK1_FEATURES.md  WEEK1_SHOWCASE.md  WEEK1_STATUS.txt  WEEK1_SUMMARY.md  WEEK2_COMPLETE.md  WEEK2_STATUS.txt  WEEKS_1_AND_2_SUMMARY.md  benchmark.py  (+5 more)
.github/actions/pkgsizer/: action.yml
.github/workflows/: pkgsizer.yml
docs/: index.html  index.md
examples/: README.md  basic_usage.py
pkgsizer/: __init__.py  alternatives.py  cli.py  compare.py  dist_metadata.py  env_locator.py  graph.py  html_report.py  report.py  scanner.py  size_calc.py  subpackages.py  unused_command.py  updates.py  why_command.py
pkgsizer/file_parsers/: __init__.py  conda.py  poetry.py  requirements.py  uv.py
pkgsizer/templates/: report.html
tests/: __init__.py  test_env_locator.py  test_file_parsers.py  test_html_report.py  test_report.py  test_size_calc.py
