[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgsizer"
version = "0.1.1"
description = "Python package size analyzer - measure disk sizes, analyze dependencies, find unused packages, optimize Docker images"
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "pkgsizer contributors"}
]
keywords = [
    "python",
    "package-size",
    "dependency-analysis",
    "disk-size",
    "size-analyzer",
    "package-manager",
    "dependencies",
    "requirements",
    "virtual-environment",
    "docker-optimization",
    "pip",
    "poetry",
    "conda",
    "unused-dependencies",
    "dependency-tree",
    "package-optimization",
    "environment-analysis",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "packaging>=23.0",
    "tomli>=2.0.0; python_version < '3.11'",
    "PyYAML>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
]

[project.scripts]
pkgsizer = "pkgsizer.cli:app"

[project.urls]
Homepage = "https://github.com/YOUR_USERNAME/pkgsizer"
Documentation = "https://github.com/YOUR_USERNAME/pkgsizer#readme"
Repository = "https://github.com/YOUR_USERNAME/pkgsizer"
Issues = "https://github.com/YOUR_USERNAME/pkgsizer/issues"
Changelog = "https://github.com/YOUR_USERNAME/pkgsizer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkgsizer*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

