[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pkgsizer"
version = "0.1.2"
description = "Python package size analyzer - measures disk sizes of installed packages, analyzes dependencies, finds unused packages, suggests alternatives, compares environments, and optimizes Docker images. CLI tool for Python developers to optimize package footprints."
readme = "README.md"
requires-python = ">=3.9"
authors = [
    {name = "pkgsizer contributors"}
]
keywords = [
    "python",
    "package-size",
    "dependency-analysis",
    "disk-size",
    "size-analyzer",
    "package-manager",
    "dependencies",
    "requirements",
    "virtual-environment",
    "docker-optimization",
    "pip",
    "poetry",
    "conda",
    "unused-dependencies",
    "dependency-tree",
    "package-optimization",
    "environment-analysis",
    "gitlab-ci",
    "github-actions",
    "command-line-tool",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Utilities",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Environment :: Console",
]
dependencies = [
    "typer>=0.9.0",
    "rich>=13.0.0",
    "packaging>=23.0",
    "tomli>=2.0.0; python_version < '3.11'",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "mypy>=1.0.0",
    "ruff>=0.1.0",
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
]
html = [
    "Jinja2>=3.1.0",
]
yaml = [
    "PyYAML>=6.0",
]
all = [
    "Jinja2>=3.1.0",
    "PyYAML>=6.0",
]

[project.scripts]
pkgsizer = "pkgsizer.cli:app"

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
pkgsizer = [
    "templates/*.html",
]

[project.urls]
Homepage = "https://wassimbensalem.github.io/pkgsizer"
Documentation = "https://github.com/wassimbensalem/pkgsizer#readme"
Repository = "https://github.com/wassimbensalem/pkgsizer"
Issues = "https://github.com/wassimbensalem/pkgsizer/issues"
Changelog = "https://github.com/wassimbensalem/pkgsizer/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["pkgsizer*"]

[tool.ruff]
line-length = 100
target-version = "py39"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = []

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

